--- a/小薇学院/任务三三栏式布局/index.html
+++ b/小薇学院/任务三三栏式布局/index.html
@@ -13,9 +13,8 @@
 				background: lightgray;
 				padding: 20px;
 				overflow: hidden;
-				border:1px solid #999 ;
-				display: flex;
-				align-items: flex-start; //将中间div的高度自适应
+				border:1px solid #999 ;		
+				position: relative;		
 			}
 			#intro,#logo,#photo{
 				border:1px solid darkgray ;
@@ -23,15 +22,15 @@
 			}
 			#logo{
 				width: 200px;height: 120px;
-				margin-right:20px ;
+				float: left;
 			}
 			#photo{
 				width: 120px;
-				margin-left:20px ;
+				float: right;
 			}
 			#intro{
-				height: auto;
-				flex: 1;
+				margin-left: 220px;
+				margin-right: 140px;
 			}
 			#intro h3,h4,p{
 				line-height: 2em;
@@ -53,6 +52,13 @@
 				<img src="#" alt="团队logo"/>
 				<p>团队名称</p>
 			</div>
+			
+			<div id="photo">
+				<img src="#" alt="个人logo"/>
+				<img src="#" alt="个人logo"/>
+				<img src="#" alt="个人logo"/>
+				<img src="#" alt="个人logo"/>
+			</div>
 			<div id="intro">
 				<h3>介绍一个我的团队</h3>
 				<p>这是团队介绍这是团队介绍这是团队介绍这是团队介绍
@@ -66,12 +72,6 @@
 				这是团队介绍这是团队介绍这是团队介绍这是团队介绍
 				这是团队介绍这是团队介绍这是团队介绍这是团队介绍
 				</p>
-			</div>
-			<div id="photo">
-				<img src="#" alt="个人logo"/>
-				<img src="#" alt="个人logo"/>
-				<img src="#" alt="个人logo"/>
-				<img src="#" alt="个人logo"/>
 			</div>
 		</div>
 	</body>
