--- a/小薇学院/任务六模拟报纸排版/index.html
+++ b/小薇学院/任务六模拟报纸排版/index.html
@@ -67,8 +67,7 @@
 				
 			}
 			#a2left p{text-indent: 4px;}
-			#a2left img{width: 100px;height: 200px;}
-			#a2left div:last-child{position: absolute;right: 0px;top: 300px;}
+			#a2left img{width: 100px;height: 200px;float: right;}
 			
 			#a2right{width: 458px;float: right;margin-top: 20px;}
 			#top{
@@ -93,7 +92,7 @@
 				text-align: center;font-family: "黑体";
 			}
 			#bottom .right p{
-				font-size: 14px;font-style: italic;color: #5a5b5b;margin-top: 40px;line-height: 16px;
+				font-size: 14px;font-style: italic;color: #5a5b5b;line-height: 16px;
 			}
 			#bottom .right span{
 				font-size: 72px;color: #D45D5C;
@@ -184,10 +183,9 @@
 						<article id="a2mian">
 							<p><span>前</span>端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
 							前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
+							前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端<img src="photo.png" alt="" />前端前端前端
 							前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
-							前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
-							前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
-							前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+							前端前端</p>
 							<p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
 							前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
 							前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
@@ -197,7 +195,7 @@
 							前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
 							前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
 							前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
-							<div><img src="photo.png" alt="" /></div>
+							<!--<div></div>-->
 						</article>
 					</div>
 					<div id="a2right">
@@ -220,7 +218,7 @@
 								</div>
 							</div>
 							<div class="right">
-								<p><span>“</span>Hello World Hello World Hello World Hello World <span>”</span></p>
+								<span>“</span><p>Hello World Hello World Hello World Hello World </p><span>”</span>
 							</div>
 						</div>
 					</div>
